# EncryptedPoker

./: .gitignore  Anchor.toml  Arcium.toml  LICENSE  README.md
app/: .env.example  index.html  on_chain_idl.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  main.tsx
app/src/hooks/: useTableRealtime.ts
app/src/idl/: encrypted_poker.json
app/src/lib/: card-utils.ts  constants.ts  (+2 more)
artifacts/: circuits_hash.txt  docker-compose-arx-env.yml
artifacts/localnet/: identity_0.pem  identity_1.pem  identity_2.pem  identity_3.pem  identity_4.pem  identity_5.pem  identity_6.pem  node_0.json  node_1.json  node_2.json  node_4.json  node_5.json  node_6.json  node_bls_0.json  node_bls_1.json  node_bls_2.json  node_bls_3.json  node_bls_4.json  node_bls_5.json  node_bls_6.json  node_callback_0.json  node_callback_1.json  node_callback_2.json  node_callback_3.json  node_callback_4.json  node_callback_5.json  node_callback_6.json  node_x25519_0.json  node_x25519_1.json  node_x25519_2.json  node_x25519_3.json  node_x25519_4.json  node_x25519_5.json  recovery_node_3.json  recovery_node_x25519_6.json  td_identity.pem  td_master_seed.json
artifacts/private_shares_node_0/: AxwPZ5ZiuZwrFss1jjFh5zAozYt2EKBZYT9Mw2wN7fye.private_shares
artifacts/private_shares_node_1/: AxwPZ5ZiuZwrFss1jjFh5zAozYt2EKBZYT9Mw2wN7fye.private_shares
artifacts/public_inputs_node_0/: AxwPZ5ZiuZwrFss1jjFh5zAozYt2EKBZYT9Mw2wN7fye.public_inputs
encrypted-ixs/src/: lib.rs
programs/encrypted-poker/: Cargo.toml
programs/encrypted-poker/src/: lib.rs
tests/: poker-test.ts
(+12 files in other folders)
